--- a/source/form.html
+++ b/source/form.html
@@ -13,13 +13,13 @@
       </div>
       <nav class="main-nav">
         <ul class="main-nav__list">
-          <li class="site-list__item"><a href="index.html">Главная</a></li>
-          <li class="site-list__item"><a href="catalog.html">Фотографии</a></li>
-          <li class="site-list__item"><a href="#">Конкурс</a></li>
-          <li class="site-list__item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
+          <li class="list-item"><a href="index.html">Главная</a></li>
+          <li class="list-item"><a href="catalog.html">Фотографии</a></li>
+          <li class="list-item"><a href="#">Конкурс</a></li>
+          <li class="list-item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
         </ul>
       </nav>
-      <h2 class="into-heading">Конкурс на самое безбашенное путешествие с Пинк</h2>
+      <h2 class="intro__heading">Конкурс на самое безбашенное путешествие с Пинк</h2>
     </div>
   </header>
   <main class="page__main">
@@ -29,8 +29,8 @@
       <div class="container">
         <h2 class="form-heading">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</h2>
         <form class="form" method="get" action="https://echo.htmlacademy.ru" id="main-form">
-          <fieldset class="main-form__worksheet">
-            <legend class="worksheet__legeend">Анкета</legend>
+          <fieldset class="main-form__worksheet worksheet">
+            <legend class="visually-hidden">Анкета</legend>
 
             <label class="worksheep__label" for="surname">Фамилия</label>
             <input class="worksheep__input" type="text" name="surname" id="surname" required="required" placeholder="Укажите фамилию *">
@@ -105,9 +105,9 @@
     </div>
     <div class="footer-social">
       <ul class="footer-social__list">
-        <li class="footer-social__item footer-social__item--twiter"></li>
-        <li class="footer-social__item footer-social__item--facebook"></li>
-        <li class="footer-social__item footer-social__item--youtube"></li>
+        <li class="footer-social__item footer-social__item--twiter"><span class="visyalli-hidden">Twitter</span></li>
+        <li class="footer-social__item footer-social__item--facebook"><span class="visyalli-hidden">Facebook</span></li>
+        <li class="footer-social__item footer-social__item--youtube"><span class="visyalli-hidden">Youtube</span></li>
       </ul>
     </div>
     <a href="https://htmlacademy.ru/intensive/adaptive" class="footer-developer">
