--- a/source/form.html
+++ b/source/form.html
@@ -13,10 +13,10 @@
       </div>
       <nav class="main-nav">
         <ul class="main-nav__list">
-          <li class="list-item"><a href="index.html">Главная</a></li>
-          <li class="list-item"><a href="catalog.html">Фотографии</a></li>
-          <li class="list-item"><a href="#">Конкурс</a></li>
-          <li class="list-item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
+          <li class="main-nav__list-item"><a href="index.html">Главная</a></li>
+          <li class="main-nav__list-item"><a href="catalog.html">Фотографии</a></li>
+          <li class="main-nav__list-item"><a href="#">Конкурс</a></li>
+          <li class="main-nav__list-item"><a href="https://htmlacademy.ru/intensive/adaptive">HTML ACADEMY</a></li>
         </ul>
       </nav>
       <h2 class="intro__heading">Конкурс на самое безбашенное путешествие с Пинк</h2>
@@ -105,9 +105,9 @@
     </div>
     <div class="footer-social">
       <ul class="footer-social__list">
-        <li class="footer-social__item footer-social__item--twiter"><span class="visyalli-hidden">Twitter</span></li>
-        <li class="footer-social__item footer-social__item--facebook"><span class="visyalli-hidden">Facebook</span></li>
-        <li class="footer-social__item footer-social__item--youtube"><span class="visyalli-hidden">Youtube</span></li>
+        <li class="footer-social__item footer-social__item--twiter"><a href="#"><span class="visyalli-hidden">Twitter</span></a></li>
+        <li class="footer-social__item footer-social__item--facebook"><a href="#"><span class="visyalli-hidden">Facebook</span></a></li>
+        <li class="footer-social__item footer-social__item--youtube"><a href="#"><span class="visyalli-hidden">Youtube</span></a></li>
       </ul>
     </div>
     <a href="https://htmlacademy.ru/intensive/adaptive" class="footer-developer">
