--- a/source/form.html
+++ b/source/form.html
@@ -99,7 +99,7 @@
     </section>
   </main>
 
-  <footer class="page__footer">
+  <footer class="page__footer footer">
     <div class="footer-logo">
       <img src="https://via.placeholder.com/150x150">
     </div>
