--- a/source/index.html
+++ b/source/index.html
@@ -176,7 +176,7 @@
     </section>
   </main>
 
-  <footer class="page__footer">
+  <footer class="page__footer footer">
     <div class="footer-logo">
       <img src="https://via.placeholder.com/150x150">
     </div>
