--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="page__body container">
+<body class="page__body">
   <header class="page-header">
     <div class="page-header__main-inform">
       <div class="page-header__head">
